--- a/noodletimer/Base.lproj/Main.storyboard
+++ b/noodletimer/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="noodletimer" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,72 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOe-Pn-mK3">
+                                <rect key="frame" x="279" y="203" width="42" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="LU7-xC-LcK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Flh-Gh-CLT">
+                                <rect key="frame" x="127" y="436" width="46" height="30"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="start_button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2iM-X0-Sqo"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z1M-AE-YXW">
+                                <rect key="frame" x="277" y="436" width="46" height="30"/>
+                                <state key="normal" title="Stop">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="stop_button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BXC-WA-n6y"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qiK-6K-JSi">
+                                <rect key="frame" x="424" y="436" width="46" height="30"/>
+                                <state key="normal" title="Reset">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="EOe-Pn-mK3" secondAttribute="centerX" id="Mz3-ma-Rt8"/>
+                            <constraint firstItem="z1M-AE-YXW" firstAttribute="baseline" secondItem="Flh-Gh-CLT" secondAttribute="baseline" id="SyB-h0-4cZ"/>
+                            <constraint firstItem="z1M-AE-YXW" firstAttribute="leading" secondItem="Flh-Gh-CLT" secondAttribute="trailing" constant="104" id="TXu-Af-Fhf"/>
+                            <constraint firstAttribute="trailing" secondItem="qiK-6K-JSi" secondAttribute="trailing" constant="118" id="U7n-VU-0gH"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Flh-Gh-CLT" secondAttribute="bottom" constant="134" id="V63-kb-wz5"/>
+                            <constraint firstItem="Flh-Gh-CLT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="139" id="Y2F-0y-Kst"/>
+                            <constraint firstItem="EOe-Pn-mK3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="183" id="kCp-s3-omH"/>
+                            <constraint firstItem="qiK-6K-JSi" firstAttribute="baseline" secondItem="z1M-AE-YXW" secondAttribute="baseline" id="rSB-e7-FUe"/>
+                            <constraint firstAttribute="centerX" secondItem="z1M-AE-YXW" secondAttribute="centerX" id="vi5-TQ-xvh"/>
+                            <constraint firstItem="z1M-AE-YXW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="289" id="wku-WS-ZIQ"/>
+                            <constraint firstItem="qiK-6K-JSi" firstAttribute="leading" secondItem="z1M-AE-YXW" secondAttribute="trailing" constant="101" id="zLH-Nl-zIg"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Y2F-0y-Kst"/>
+                                <exclude reference="wku-WS-ZIQ"/>
+                                <exclude reference="U7n-VU-0gH"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="start_button" destination="Flh-Gh-CLT" id="7GL-Pj-N0e"/>
+                        <outlet property="stop_button" destination="z1M-AE-YXW" id="f4t-a0-bbD"/>
+                        <outlet property="time01" destination="EOe-Pn-mK3" id="vzc-xI-7yc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="252" y="264"/>
         </scene>
     </scenes>
 </document>
